--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
-    * {
+    /* * {
         box-sizing: border-box;
         margin: 0;
         padding: 0;
-    }
+    } */
+    /*
+    CSS Global
+    */
+    /*Limitacion de tamaño*/
     
     body {
         background: fuchsia;
@@ -22,6 +26,9 @@
         grid-template-columns: 1fr 4fr 1fr;
         grid-template-rows: 800px;
     }
+    /*
+    CSS Del Bloque Titulo
+    */
     /* bloque del titulo*/
     
     .title {
@@ -45,41 +52,203 @@
         justify-content: center;
         font-size: 5rem;
     }
+    /*
+    CSS Del Menu IZQ
+    */
     /*Menu Izq*/
     
     .menuLeft {
         display: grid;
         position: relative;
         grid-template-columns: 1fr;
-        grid-template-rows: 2fr 1fr 3fr;
+        grid-template-rows: 1fr 1fr 4fr;
+        row-gap: 10px;
     }
+    /* Bloque Tiempo*/
     
-    .timer {
-        margin: 5px;
+    .menuTimer {
         background: #b5b5b3;
         border-radius: 15px;
-        font: 18px stencil, sans-serif;
         text-align: center;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
     }
-    /* falta */
+    /*Titulo de Tiempo*/
+    
+    .menuTimerTitle {
+        background: #dada0f;
+    }
+    /*Texto de Tiempo*/
     
     .currentTime {
         text-align: center;
         display: inline-block;
     }
+    /*Bloque Powers*/
+    
+    .menuPowers {
+        background: #b5b5b3;
+        border-radius: 15px;
+        text-align: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 2fr;
+        justify-items: center;
+        align-items: center;
+    }
+    /*Titulo Powers*/
+    
+    .menuPowersTitle {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    /*Powers*/
+    
+    .playerPowers {
+        background: green;
+        border-radius: 15px;
+        width: 80%;
+        height: 80%;
+    }
+    /*Bloque Puntuacion General*/
+    
+    .menuScore {
+        background: cornflowerblue;
+        border-radius: 15px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+    /*Bloque Puntuacion*/
+    
+    .mnScorePoints {
+        background: darkcyan;
+        border-radius: 15px;
+        width: 80%;
+        height: 80%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+    /*Bloque Objetos Encontrados*/
+    
+    .mnScoreItems {
+        background: darkcyan;
+        border-radius: 15px;
+        width: 80%;
+        height: 80%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+    /*Bloque Total Objetos*/
+    
+    .mnScoreTotal {
+        background: darkcyan;
+        border-radius: 15px;
+        width: 80%;
+        height: 80%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+    /*Titulos Puntuacion*/
+    
+    .mnScoreTitle {
+        text-align: center;
+    }
+    /*Texto Puntuaciones*/
+    
+    .mnScoreValue {
+        text-align: center;
+    }
+    /*
+    CSS Menu DCH
+    */
     /*Menu Dch*/
     
     .menuRight {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 4fr 2fr;
+        row-gap: 10px;
     }
+    /*Bloque Items*/
+    
+    .menuItems {
+        background: chocolate;
+        border-radius: 15px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 2fr 2fr 2fr;
+        justify-items: center;
+        align-items: center;
+        column-gap: 5px;
+        row-gap: 10px;
+    }
+    /*Titulo Items*/
+    
+    .menuItemsTitle {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    /*Grid de Item*/
+    
+    .menuItemsItem {
+        display: grid;
+        height: 90%;
+        width: 90%;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    /*Bloque Museo*/
+    
+    .menuMuseum {
+        background: chocolate;
+        border-radius: 15px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(7, 1fr);
+        justify-items: center;
+        align-items: center;
+        row-gap: 2px;
+    }
+    /*Titulo museo*/
+    
+    .menuMuseumTitle {
+        background: darkgray;
+        height: 90%;
+        width: 90%;
+    }
+    /*Items Museo*/
+    
+    .menuMuseumItem {
+        background: cyan;
+        height: 90%;
+        width: 90%;
+    }
+    /*
+    CSS Bloque Central
+    */
     /* Bloque Central*/
     
     .mainBlock {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 4fr 1fr;
+        justify-items: center;
+        align-items: center;
     }
     /* Grid Tablero*/
     
@@ -87,7 +256,8 @@
         display: grid;
         grid-template-columns: repeat(13, 1fr);
         grid-template-rows: repeat(13, 1fr);
-        margin: 5px;
+        width: 95%;
+        height: 95%;
     }
     /*Tile*/
     
@@ -99,4 +269,50 @@
     
     .tile:nth-child(even) {
         background: cyan;
+    }
+    /* Gas Restante*/
+    
+    .playerEnergy {
+        background: rgb(33, 121, 252);
+        border-radius: 25px;
+        display: grid;
+        width: 90%;
+        height: 90%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 3fr;
+        justify-items: center;
+        align-items: center;
+        row-gap: 2px;
+    }
+    
+    .plyrNrgTitle {
+        background: rgb(252, 33, 234);
+        width: 90%;
+        height: 90%;
+        text-align: center;
+    }
+    
+    .plyrNrgBarBlock {
+        width: 90%;
+        height: 80%;
+    }
+    
+    .nrgBarBackground {
+        padding: 6px;
+        border-radius: 30px;
+        background: rgba(0, 0, 0, 0.25);
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+        height: 90%;
+    }
+    
+    .nrg-bar {
+        height: 99%;
+        border-radius: 25px;
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+    }
+    
+    .nrg-moved .nrg-bar {
+        width: 100%;
+        background-color: #EF476F;
+        transition: all .5s ease-in-out;
     }
