--- a/css/style.css
+++ b/css/style.css
@@ -269,11 +269,11 @@
     }
     
     .undigged {
-        background-image: url(../img/tex_tile_1.png);
+        background-image: url(../img/tex_tile_1.webp);
     }
     
     .digged {
-        background-image: url(../img/tex_tile_2.png);
+        background-image: url(../img/tex_tile_2.webp);
     }
     
     .undigged:hover {
